k8s/wbe-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: workbook-exporter
  labels:
    app: workbook-exporter
