k8s/wbe-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wbe-ingress
  namespace: workbook-exporter
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wbe.example.com
    secretName: wbe-tls
  rules:
  - host: wbe.example.com
    http:
      paths:
      - backend:
          serviceName: workbook-exporter-svc
          servicePort: 9701
